--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ env/
 
 # Large model files - These should be uploaded to Colab manually
 FineTuning_phi3/
+offload/
 
 # OS-specific files
 .DS_Store
